--- a/Objects/BTL_nhung.build_log.htm
+++ b/Objects/BTL_nhung.build_log.htm
@@ -80,110 +80,116 @@ main_nhung.c(30): warning: no previous extern declaration for non-static variabl
 main_nhung.c(30): note: declare 'static' if the variable is not intended to be used outside of this translation unit
    30 | float G = 9.81;                                                                 // gia toc trai dat
       | ^
-main_nhung.c(36): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   36 | // function c<E2>u h<EC>nh chung
-      |              ^
-main_nhung.c(36): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   36 | // function c<E2>u h<EC>nh chung
-      |                     ^
-main_nhung.c(40): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   40 | // c<E1>c function xu l<FD> led
+main_nhung.c(35): warning: no previous extern declaration for non-static variable 'check' [-Wmissing-variable-declarations]
+   35 | int check = 0;
       |     ^
-main_nhung.c(40): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   40 | // c<E1>c function xu l<FD> led
-      |                        ^
-main_nhung.c(52): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   52 | // c<E1>c function d<F9>ng I2C
-      |     ^
-main_nhung.c(52): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   52 | // c<E1>c function d<F9>ng I2C
-      |                     ^
-main_nhung.c(65): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   65 | // c<E1>c function t<ED>nh to<E1>n
-      |     ^
-main_nhung.c(65): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   65 | // c<E1>c function t<ED>nh to<E1>n
-      |                     ^
-main_nhung.c(65): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   65 | // c<E1>c function t<ED>nh to<E1>n
-      |                              ^
-main_nhung.c(70): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   70 | // c<E1>c function d<E0>nh cho interrupt
-      |     ^
-main_nhung.c(70): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-   70 | // c<E1>c function d<E0>nh cho interrupt
-      |                     ^
-main_nhung.c(113): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
-  113 |                                                                 GPIOC->ODR &= ~(1<<13);         
-      |                                                                            ~~ ^~~~~~~~
-main_nhung.c(97): warning: function 'Run' could be declared with attribute 'noreturn' [-Wmissing-noreturn]
-   97 | {
+main_nhung.c(35): note: declare 'static' if the variable is not intended to be used outside of this translation unit
+   35 | int check = 0;
       | ^
-main_nhung.c(131): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  131 |     // Bat I2C v<E0> GPIOB
+main_nhung.c(37): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   37 | // function c<E2>u h<EC>nh chung
+      |              ^
+main_nhung.c(37): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   37 | // function c<E2>u h<EC>nh chung
+      |                     ^
+main_nhung.c(41): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   41 | // c<E1>c function xu l<FD> led
+      |     ^
+main_nhung.c(41): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   41 | // c<E1>c function xu l<FD> led
+      |                        ^
+main_nhung.c(53): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   53 | // c<E1>c function d<F9>ng I2C
+      |     ^
+main_nhung.c(53): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   53 | // c<E1>c function d<F9>ng I2C
+      |                     ^
+main_nhung.c(66): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   66 | // c<E1>c function t<ED>nh to<E1>n
+      |     ^
+main_nhung.c(66): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   66 | // c<E1>c function t<ED>nh to<E1>n
+      |                     ^
+main_nhung.c(66): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   66 | // c<E1>c function t<ED>nh to<E1>n
+      |                              ^
+main_nhung.c(71): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   71 | // c<E1>c function d<E0>nh cho interrupt
+      |     ^
+main_nhung.c(71): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+   71 | // c<E1>c function d<E0>nh cho interrupt
+      |                     ^
+main_nhung.c(118): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
+  118 |                                                                         GPIOC->ODR &= ~(1<<13); 
+      |                                                                                    ~~ ^~~~~~~~
+main_nhung.c(98): warning: function 'Run' could be declared with attribute 'noreturn' [-Wmissing-noreturn]
+   98 | {
+      | ^
+main_nhung.c(137): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  137 |     // Bat I2C v<E0> GPIOB
       |                 ^
-main_nhung.c(143): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  143 |     I2C1->CR1 |= I2C_CR1_PE; // K<ED>ch ho?t I2C
-      |                                  ^
 main_nhung.c(149): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  149 |     while (!(I2C1->SR1 & I2C_SR1_SB));  // <D0>?i bit SB du?c set
+  149 |     I2C1->CR1 |= I2C_CR1_PE; // K<ED>ch ho?t I2C
+      |                                  ^
+main_nhung.c(155): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  155 |     while (!(I2C1->SR1 & I2C_SR1_SB));  // <D0>?i bit SB du?c set
       |                                            ^
-main_nhung.c(152): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  152 | // d<F3>ng giao th?c I2C
+main_nhung.c(158): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  158 | // d<F3>ng giao th?c I2C
       |     ^
-main_nhung.c(203): warning: implicit conversion loses integer precision: 'volatile uint16_t' (aka 'volatile unsigned short') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-  203 |     data = I2C1->DR;
+main_nhung.c(209): warning: implicit conversion loses integer precision: 'volatile uint16_t' (aka 'volatile unsigned short') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
+  209 |     data = I2C1->DR;
       |          ~ ~~~~~~^~
-main_nhung.c(221): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
-  221 |      *x = ((int16_t)I2C_Read_Data(MPU6050_ACCEL_XOUT_H) << 8) | I2C_Read_Data(MPU6050_ACCEL_XOUT_L);
+main_nhung.c(227): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
+  227 |      *x = ((int16_t)I2C_Read_Data(MPU6050_ACCEL_XOUT_H) << 8) | I2C_Read_Data(MPU6050_ACCEL_XOUT_L);
       |         ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-main_nhung.c(222): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
-  222 |      *y = ((int16_t)I2C_Read_Data(MPU6050_ACCEL_YOUT_H) << 8) | I2C_Read_Data(MPU6050_ACCEL_YOUT_L);
+main_nhung.c(228): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
+  228 |      *y = ((int16_t)I2C_Read_Data(MPU6050_ACCEL_YOUT_H) << 8) | I2C_Read_Data(MPU6050_ACCEL_YOUT_L);
       |         ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-main_nhung.c(223): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
-  223 |      *z = ((int16_t)I2C_Read_Data(MPU6050_ACCEL_ZOUT_H) << 8) | I2C_Read_Data(MPU6050_ACCEL_ZOUT_L);
+main_nhung.c(229): warning: implicit conversion loses integer precision: 'int' to 'int16_t' (aka 'short') [-Wimplicit-int-conversion]
+  229 |      *z = ((int16_t)I2C_Read_Data(MPU6050_ACCEL_ZOUT_H) << 8) | I2C_Read_Data(MPU6050_ACCEL_ZOUT_L);
       |         ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-main_nhung.c(273): warning: implicit conversion loses floating-point precision: 'double' to 'float' [-Wimplicit-float-conversion]
-  273 |                 return sqrt(a*a + b*b + c*c);
+main_nhung.c(280): warning: implicit conversion loses floating-point precision: 'double' to 'float' [-Wimplicit-float-conversion]
+  280 |                 return sqrt(a*a + b*b + c*c);
       |                 ~~~~~~ ^~~~~~~~~~~~~~~~~~~~~
-main_nhung.c(273): warning: implicit conversion increases floating-point precision: 'float' to 'double' [-Wdouble-promotion]
-  273 |                 return sqrt(a*a + b*b + c*c);
+main_nhung.c(280): warning: implicit conversion increases floating-point precision: 'float' to 'double' [-Wdouble-promotion]
+  280 |                 return sqrt(a*a + b*b + c*c);
       |                        ~~~~ ~~~~~~~~~~^~~~~
-main_nhung.c(277): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  277 | // h<E0>m ph<E1>t hien ng<E3> 1 - true, 0 - false
+main_nhung.c(284): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  284 | // h<E0>m ph<E1>t hien ng<E3> 1 - true, 0 - false
       |     ^
-main_nhung.c(277): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  277 | // h<E0>m ph<E1>t hien ng<E3> 1 - true, 0 - false
+main_nhung.c(284): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  284 | // h<E0>m ph<E1>t hien ng<E3> 1 - true, 0 - false
       |             ^
-main_nhung.c(277): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  277 | // h<E0>m ph<E1>t hien ng<E3> 1 - true, 0 - false
+main_nhung.c(284): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  284 | // h<E0>m ph<E1>t hien ng<E3> 1 - true, 0 - false
       |                          ^
-main_nhung.c(281): warning: implicit conversion increases floating-point precision: 'float' to 'double' [-Wdouble-promotion]
-  281 |                 if (magnitude > FALL_THRESHOLD_HIGH*G) return 1;
+main_nhung.c(288): warning: implicit conversion increases floating-point precision: 'float' to 'double' [-Wdouble-promotion]
+  288 |                 if (magnitude > FALL_THRESHOLD_HIGH*G) return 1;
       |                     ^~~~~~~~~ ~
-main_nhung.c(281): warning: implicit conversion increases floating-point precision: 'float' to 'double' [-Wdouble-promotion]
-  281 |                 if (magnitude > FALL_THRESHOLD_HIGH*G) return 1;
+main_nhung.c(288): warning: implicit conversion increases floating-point precision: 'float' to 'double' [-Wdouble-promotion]
+  288 |                 if (magnitude > FALL_THRESHOLD_HIGH*G) return 1;
       |                                                    ~^
-main_nhung.c(286): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  286 | // cau hinh cho interrupt o chan pa0 v<E0> pa1
+main_nhung.c(293): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  293 | // cau hinh cho interrupt o chan pa0 v<E0> pa1
       |                                       ^
-main_nhung.c(279): warning: unused variable 'fall_start_time' [-Wunused-variable]
-  279 |     static unsigned long fall_start_time = 0;
+main_nhung.c(286): warning: unused variable 'fall_start_time' [-Wunused-variable]
+  286 |     static unsigned long fall_start_time = 0;
       |                          ^~~~~~~~~~~~~~~
-main_nhung.c(364): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
-  364 |                 GPIOA->ODR = (GPIOA->ODR & 0x0F) | (bits << 4);
+main_nhung.c(372): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
+  372 |                 GPIOA->ODR = (GPIOA->ODR & 0x0F) | (bits << 4);
       |                                                  ~  ~~~~~^~~~
-main_nhung.c(391): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
-  391 |                 GPIOA->CRL &= ~(0xFFFF);
+main_nhung.c(399): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
+  399 |                 GPIOA->CRL &= ~(0xFFFF);
       |                            ~~ ^~~~~~~~~
-main_nhung.c(393): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
-  393 |                 GPIOB->CRL &= ~(0xFF);
+main_nhung.c(401): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
+  401 |                 GPIOB->CRL &= ~(0xFF);
       |                            ~~ ^~~~~~~
-main_nhung.c(419): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
-  419 |                 GPIOC->CRH &= ~(0xF << 20);
+main_nhung.c(427): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
+  427 |                 GPIOC->CRH &= ~(0xF << 20);
       |                            ~~ ^~~~~~~~~~~~
-main_nhung.c(422): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
-  422 |                 GPIOC->ODR &= ~(1<<13);
+main_nhung.c(430): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
+  430 |                 GPIOC->ODR &= ~(1<<13);
       |                            ~~ ^~~~~~~~
 main_nhung.c(32): warning: no previous extern declaration for non-static variable 'X' [-Wmissing-variable-declarations]
    32 | volatile int16_t X, Y, Z;
@@ -209,18 +215,18 @@ main_nhung.c(34): warning: no previous extern declaration for non-static variabl
 main_nhung.c(34): note: declare 'static' if the variable is not intended to be used outside of this translation unit
    34 | enum status system;
       | ^
-main_nhung.c(409): warning: unsafe buffer access [-Wunsafe-buffer-usage]
-  409 |    for (unsigned int i = 0; str[i] != 0; i++)
+main_nhung.c(417): warning: unsafe buffer access [-Wunsafe-buffer-usage]
+  417 |    for (unsigned int i = 0; str[i] != 0; i++)
       |                             ^~~
-main_nhung.c(411): warning: unsafe buffer access [-Wunsafe-buffer-usage]
-  411 |                         LCD_Send_Data(str[i]);
+main_nhung.c(419): warning: unsafe buffer access [-Wunsafe-buffer-usage]
+  419 |                         LCD_Send_Data(str[i]);
       |                                       ^~~
-49 warnings generated.
+50 warnings generated.
 compiling main_nhung.c...
 linking...
-Program Size: Code=6562 RO-data=298 RW-data=8 ZI-data=1640  
+Program Size: Code=6634 RO-data=298 RW-data=8 ZI-data=1640  
 FromELF: creating hex file...
-".\Objects\BTL_nhung.axf" - 0 Error(s), 54 Warning(s).
+".\Objects\BTL_nhung.axf" - 0 Error(s), 55 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -247,10 +253,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE@5.6.0
 
    * Component: Keil::Device:Startup@1.0.0
-      Include file:  RTE_Driver/Config/RTE_Device.h
-      Source file:   Device/Source/ARM/STM32F1xx_OPT.s
       Source file:   Device/Source/ARM/startup_stm32f10x_md.s
+      Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/system_stm32f10x.c
+      Source file:   Device/Source/ARM/STM32F1xx_OPT.s
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
